--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@
   }
   /* pseudo-class, para definir a transição de quando passa com o mouse em cima do link */
   ul li a:hover {
-    background: #364FC7;
+    background: var(--primary-color-dark);
   }
   footer {
     font-weight: 500;
